--- a/coffee-shop/.project
+++ b/coffee-shop/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>coffee.shop</name>
+	<name>coffee-shop</name>
 	<comment></comment>
 	<projects>
 	</projects>
