--- a/coffee-shop/.settings/org.eclipse.core.resources.prefs
+++ b/coffee-shop/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,4 @@ encoding//src/main/java/coffee/shop/model/DoubleEspresso.java=UTF-8
 encoding//src/main/java/coffee/shop/model/Espresso.java=UTF-8
 encoding//src/main/java/coffee/shop/model/HotWater.java=UTF-8
 encoding//src/main/java/coffee/shop/model/Mocha.java=UTF-8
+encoding/<project>=UTF-8
